force-app/main/default/objects/Sample_Removal_Confirm__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Sample Removal Confirm</relationshipLabel>
    <relationshipName>Sample_Removal_Confirm</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>