force-app/main/default/objects/Sample_Removal_Confirm__c/fields/Sample_Removal_Code__c.field-meta.xml
<CustomField>
    <fullName>Sample_Removal_Code__c</fullName>
    <label>Sample Removal Code</label>
    <referenceTo>Sample_Removal__c</referenceTo>
    <relationshipLabel>Sample Removal Confirm</relationshipLabel>
    <relationshipName>Sample_Removal_Confirm</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>