force-app/main/default/objects/Sample_Removal_Confirm__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Sample Removal Confirm</relationshipLabel>
    <relationshipName>Sample_Removal_Confirm</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>